Fix formatting, add an image, explain link CSS
Delete extra spaces to keep documents clean. Add image that shows the code needed to link a CSS stylesheet and the HTML. Explain how to link CSS stylesheet. Add margins to HTML.

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 /*changing font*/
 html {
     font-family: 'Roboto', sans-serif;
+    margin-right: 3rem;
+    margin-left: 3rem;
   }
